--- a/views/index.html
+++ b/views/index.html
@@ -14,5 +14,11 @@
     <button type="submit">Send</button>
 </form>
     <a href="/about">About page</a>
+
+    <hr>
+    <a href="/api/users">API (get users)</a>
+
+
+
 </body>
 </html>
