--- a/express_js/views/partials/navbar.hbs
+++ b/express_js/views/partials/navbar.hbs
@@ -21,6 +21,12 @@
                 <li><a href="/add">Добавить анкету</a> </li>
             {{/if}}
 
+            {{#if isabout}}
+                <li class="active"><a href="/about">About</a> </li>
+            {{else}}
+                <li><a href="/about">About</a> </li>
+            {{/if}}
+
         </ul>
     </div>
 </nav>
