--- a/express_js/views/ankets.hbs
+++ b/express_js/views/ankets.hbs
@@ -17,7 +17,7 @@
                     <p class="custom-1">{{lastName}}</p>
                 </div>
                 <div class="card-action">
-                    <a href="/ankets/{{id}}">Посмотреть контакт</a>
+                    <a href="/ankets/{{id}}" target="_blank">Посмотреть контакт</a>
                 </div>
             </div>
         </div>
