--- a/express_js/views/anket.hbs
+++ b/express_js/views/anket.hbs
@@ -1,7 +1,8 @@
 <div class="anket">
-    <h1>{{anket.title}}</h1>
+    <h1>{{anket.email}}</h1>
 
     <img src="{{anket.img}}" alt="">
 
-    <p class="anket_email">{{anket.email}}</p>
+    <p class="anket_email">{{anket.firstName}}</p>
+    <p class="anket_email">{{anket.secondName}}</p>
 </div>
