--- a/express_js/views/anket_edit.hbs
+++ b/express_js/views/anket_edit.hbs
@@ -1,40 +1,41 @@
-<h1>Добавить анкету</h1>
+<h1>Отредактировать анкету {{ankets.email}}</h1>
 
-<form action="/add" method="POST">
+<form action="/ankets/edit" method="POST">
 
     <div class="input-field ">
-<!--        <i class="material-icons prefix">account_circle</i>-->
-        <input id="firstName" name="firstName" type="text" class="validate" required>
+        <!--        <i class="material-icons prefix">account_circle</i>-->
+        <input id="firstName" name="firstName" type="text" class="validate" required value="{{ankets.firstName}}">
         <label for="firstName">First Name</label>
         <span class="helper-text" data-error="wrong" data-success="right">Введите имя</span>
     </div>
     <div class="input-field ">
         <!--        <i class="material-icons prefix">account_circle</i>-->
-        <input id="secondName" name="secondName" type="text" class="validate" required>
+        <input id="secondName" name="secondName" type="text" class="validate" required value="{{ankets.secondName}}">
         <label for="secondName">Second Name</label>
         <span class="helper-text" data-error="wrong" data-success="right">Введите фамилию</span>
     </div>
-
     <div class="input-field ">
         <!--        <i class="material-icons prefix">account_circle</i>-->
-        <input id="email" name="email" type="text" class="validate" required>
+        <input id="email" name="email" type="text" class="validate" required value="{{ankets.email}}">
         <label for="email">email</label>
         <span class="helper-text" data-error="Incorrect email format" data-success="right">Введите email</span>
     </div>
     <div class="input-field ">
         <!--        <i class="material-icons prefix">account_circle</i>-->
-        <input id="price" name="price" type="text" class="validate" required>
+        <input id="price" name="price" type="text" class="validate" required value="{{ankets.price}}">
         <label for="price">Цена некая</label>
         <span class="helper-text" data-error="Incorrect price" data-success="right">Введите стоимость некую</span>
     </div>
     <div class="input-field ">
         <!--        <i class="material-icons prefix">account_circle</i>-->
-        <input id="img" name="img" type="text" class="validate" required>
+        <input id="img" name="img" type="text" class="validate" required value="{{ankets.img}}">
         <label for="img">Avatar url</label>
         <span class="helper-text" data-error="wrong" data-success="right">Введите url аватара</span>
     </div>
 
-    <button class="btn btn-primary">Добавить контакт</button>
+    <input type="hidden" name="id" value="{{ankets.id}}">
+
+    <button class="btn btn-primary">Сохранить изменения</button>
 
 
 
