--- a/express_js/views/partials/navbar.hbs
+++ b/express_js/views/partials/navbar.hbs
@@ -30,9 +30,9 @@
             {{/if}}
 
             {{#if iscont-selection}}
-                <li class="active"><a href="/cont-selection">Выборка</a> </li>
+                <li class="active"><a href="/cont_selection">Выборка</a> </li>
             {{else}}
-                <li><a href="/cont-selection">Выборка</a> </li>
+                <li><a href="/cont_selection">Выборка</a> </li>
             {{/if}}
 
         </ul>
